manifests/prod/ntfy/Namespace-ntfy.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: ntfy
