manifests/prod/ntfy/EndpointSlice-ntfy.yaml
addressType: IPv4
apiVersion: discovery.k8s.io/v1
endpoints:
  - addresses:
      - 100.83.142.17
    conditions:
      ready: true
kind: EndpointSlice
metadata:
  labels:
    kubernetes.io/service-name: ntfy
  name: ntfy
  namespace: ntfy
ports:
  - name: http
    port: 9007
    protocol: TCP
