manifests/prod/ntfy/Endpoints-ntfy.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: ntfy
  namespace: ntfy
subsets:
  - addresses:
      - ip: 100.83.142.17
    ports:
      - name: http
        port: 9007
