manifests/prod/ntfy/Service-ntfy.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: ntfy
spec:
  ports:
    - name: http
      port: 80
      targetPort: 9007
  type: ClusterIP
