manifests/prod/ntfy/Ingress-ntfy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: k3s-lan-ca
  name: ntfy
  namespace: ntfy
spec:
  ingressClassName: traefik
  rules:
    - host: ntfy.k3s.lan
      http:
        paths:
          - backend:
              service:
                name: ntfy
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ntfy.k3s.lan
      secretName: ntfy-tls
